# ITU

./: .gitignore  .gitmodules
1.semester/advancedProgramming/2021-adpro-local/.bsp/: sbt.json
1.semester/advancedProgramming/2021-adpro-local/.metals/: metals.lock.db
1.semester/advancedProgramming/2021-adpro-local/010-intro/.metals/: metals.h2.db
1.semester/advancedProgramming/2021-adpro-local/020-adt/: README.md
1.semester/advancedProgramming/2021-adpro-local/020-adt/.metals/: metals.lock.db
1.semester/algorithmAndDesign/assigments/kattis/network-flow/paintball/: CMakeLists.txt  Program.cpp  data_creation.py
1.semester/algorithmAndDesign/assigments/kattis/network-flow/paintball/data/: hello.txt  sample4.in  sample5.in
1.semester/lilleKat/SMIL/: Smil.py
1.semester/lilleKat/aa/: aa.py
1.semester/lilleKat/ahh/: ahh.py
1.semester/lilleKat/bluetooth/: BlueTooth.py
1.semester/lilleKat/keylogger/: keylogger.py
1.semester/pcpp/lectures/week03/: Lecture03.pptx  answers.txt  exercise3.1_answers.txt  exercise3.3.1.txt  readme.md
1.semester/pcpp/lectures/week04/: README.md
1.semester/pcpp/lectures/week05/: README.md
1.semester/pcpp/lectures/week07/: README.md
1.semester/security/assignments/exercise01/: program.py
1.semester/security/assignments/exercise02/: client.py  commen_functions.py  server.py  shared_pk.py
1.semester/security/assignments/exercise02HandIn/: commen_functions.py  requirments.txt  server.py
1.semester/security/penTest/: attackCommands.txt
1.semester/security/penTest/MySecretNotes/: Sql injections.txt  app.py
(+122 files in other folders)
